# hotel-booking-fastapi-demo

./: .gitignore  README.md  alembic.ini  database.py  main.py  pyproject.toml
booking/crud/: __init__.py  reservation.py
booking/models/: __init__.py  reservation.py
booking/schemas/: __init__.py  reservation.py
