[tool.poetry]
name = "exam2"
version = "0.1.0"
description = ""
authors = ["Maxim Sytdikov <maxim.sytdikov@saritasa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
